# Sectorwars2102

./: .claude_startup.py  .env.example  .gitignore  .replit  .replit.direct  ADMIN_UI.md  AUTOMATIC_IMPROVEMENT.md  CLAUDE-improved.md  CLAUDE.md  CLAUDE.md.orig  DEV_JOURNAL.md  DOCUMENTATION_CLEANUP_PLAN.md  DOCUMENTATION_CLEANUP_SUMMARY.md  Dockerfile  GAME_RULES.md  MEMORY_SYSTEM_GUIDE.md  NEXUS_CHAT_README.md  README.md  STARTUP.md  claude-init.sh  claude-quality-system.py  connect-to-neon.sh  demo_nexus_chat.py  demo_working_nexus.py  docker-compose.combined.yml  docker-compose.replit.yml  docker-compose.yml  e2e_tests  fix_galaxy_stats.py  implementation_plan.md  main.py  manual_test_nexus.py  models.py  nexus-chat.py  package-lock.json  package.json  pm2.config.js  pm2.replit.config.js  pyproject.toml  pytest.ini  (+14 more)
services/gameserver/: .dockerignore  .env.test  Dockerfile  backfill_market_prices.py  check_db_schema.py  check_enums.py  check_schema.py  check_ship_configs.py  create_admin.py  create_default_admin.py  populate_ship_configs.py  port_tester.py  pyproject.toml  pytest-wrapper.sh  pytest.ini  regenerate_ship_options.py  requirements.txt  restart_server.sh  run_tests_vscode.py  run_vscode_tests.py  seed_factions.py  seed_game_data.py  seed_minimal.py  setup_admin.py  simple_server.py  start.sh  test_admin_api.py  test_all_admin_endpoints.py  test_codespace_urls.py  test_discovery.py  test_faction_endpoints.py  test_fastapi_route.py  test_fastapi_simple.py  test_multi_regional_suite.py  test_sectors.py  test_server.py  test_ship_system.py  verify_imports.py  (+1 more)
(+1405 files in other folders)
